// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should implement random correctly 1`] = `"kQBDigJQFHAGypMkgTIQaqfB1f_g4_pIx2aKQZfxB9eRYsTb"`;

exports[`feature-random should implement random correctly 2`] = `"kQCCLmQp4fCNwnpEWsM9a231BvPQ_5WfgJOcDw-xAgeD6tXj"`;

exports[`feature-random should implement random correctly 3`] = `"kQCJp8aVG_O3cPyO50aOaKlNHqrdxM-aE6HKN21kc9MLxcuO"`;

exports[`feature-random should implement random correctly 4`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQBDigJQFHAGypMkgTIQaqfB1f_g4_pIx2aKQZfxB9eRYsTb",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 19330n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message",
          "type": "text",
        },
        "bounce": true,
        "from": "kQBDigJQFHAGypMkgTIQaqfB1f_g4_pIx2aKQZfxB9eRYsTb",
        "to": "kQCCLmQp4fCNwnpEWsM9a231BvPQ_5WfgJOcDw-xAgeD6tXj",
        "type": "internal",
        "value": 9967083000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`feature-random should implement random correctly 5`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQBDigJQFHAGypMkgTIQaqfB1f_g4_pIx2aKQZfxB9eRYsTb",
      "to": "kQCCLmQp4fCNwnpEWsM9a231BvPQ_5WfgJOcDw-xAgeD6tXj",
      "type": "internal",
      "value": 9967083000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 17158n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message",
          "type": "text",
        },
        "bounce": true,
        "from": "kQCCLmQp4fCNwnpEWsM9a231BvPQ_5WfgJOcDw-xAgeD6tXj",
        "to": "kQCJp8aVG_O3cPyO50aOaKlNHqrdxM-aE6HKN21kc9MLxcuO",
        "type": "internal",
        "value": 9940218000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`feature-random should implement random correctly 6`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQCCLmQp4fCNwnpEWsM9a231BvPQ_5WfgJOcDw-xAgeD6tXj",
      "to": "kQCJp8aVG_O3cPyO50aOaKlNHqrdxM-aE6HKN21kc9MLxcuO",
      "type": "internal",
      "value": 9940218000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 17001n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message2",
          "type": "text",
        },
        "bounce": true,
        "from": "kQCJp8aVG_O3cPyO50aOaKlNHqrdxM-aE6HKN21kc9MLxcuO",
        "to": "kQCJp8aVG_O3cPyO50aOaKlNHqrdxM-aE6HKN21kc9MLxcuO",
        "type": "internal",
        "value": 9913502000n,
      },
    ],
    "type": "sent",
  },
  {
    "message": {
      "body": {
        "text": "Message2",
        "type": "text",
      },
      "bounce": true,
      "from": "kQCJp8aVG_O3cPyO50aOaKlNHqrdxM-aE6HKN21kc9MLxcuO",
      "to": "kQCJp8aVG_O3cPyO50aOaKlNHqrdxM-aE6HKN21kc9MLxcuO",
      "type": "internal",
      "value": 9913502000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 4338n,
    "type": "processed",
  },
]
`;
